// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationModal /> renders closed modal 1`] = `
<div
  className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
/>
`;

exports[`<RegistrationModal /> renders modal with top and bottom text 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div
    aria-label="global.register"
    data-dialog={true}
    hidden={false}
    id="id-g"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="sc-bcXGCL jRSyOc sc-fcCDYY cap-modal__overlay"
      onClick={[Function]}
      style={
        {
          "opacity": 0,
        }
      }
    >
      <div
        className="sc-bcXGCL hANKWR sc-GKYOR djSaGS cap-modal"
        style={
          {
            "opacity": 0,
            "transform": "translateY(-20px) translateZ(0)",
            "zIndex": 9000,
          }
        }
      >
        <header
          className="sc-bcXGCL jMEcWl cap-modal__header"
        >
          <div
            className="sc-bcXGCL ejBfRc"
          >
            <h4
              className="sc-bcXGCL osejp cap-heading"
              id="modal-title"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              global.register
            </h4>
          </div>
          <button
            aria-describedby="modal-title"
            className="sc-bcXGCL dCLTmf"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="false"
              className="sc-bcXGCL sc-oZHua iTLsCl cCzERh cap-icon"
              fill="none"
              height="1em"
              role="img"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 11 11 1M1 1l10 10"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={0.8}
              />
            </svg>
          </button>
        </header>
        <div
          className="sc-bcXGCL hsPaVR cap-modal__body"
        >
          <div
            className="sc-bcXGCL kfmAic"
          >
            <div
              className=" ql-editor wysiwyg-render"
              dangerouslySetInnerHTML={
                {
                  "__html": "Jsuis o top",
                }
              }
            />
          </div>
          <div
            className="sc-bcXGCL hOBcKE cap-form-control"
          >
            <label
              className="sc-bcXGCL egOoIT cap-form-label"
              htmlFor=":r0:"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              <span
                className="sc-bcXGCL dRxVYq cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                global.email
              </span>
            </label>
            <input
              aria-required={true}
              autoComplete="email"
              autoFocus={true}
              className="sc-bcXGCL sc-dwnPIk cmIMrK eCNeCU cap-input"
              disabled={false}
              id=":r0:"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="email.placeholder"
              readOnly={false}
              required={true}
              type="email"
            />
          </div>
          <div
            className="sc-bcXGCL jAguPG"
          >
            <div
              className="sc-bcXGCL dAxZoG cap-form-control"
            >
              <label
                className="sc-bcXGCL egOoIT cap-form-label"
                htmlFor=":r1:"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                <span
                  className="sc-bcXGCL dRxVYq cap-text"
                  style={
                    {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                >
                  registration.password
                </span>
              </label>
              <input
                aria-required={true}
                autoComplete="off"
                autoFocus={true}
                className="sc-bcXGCL sc-dwnPIk cmIMrK eCNeCU cap-input"
                disabled={false}
                id=":r1:"
                name="plainPassword"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={false}
                required={true}
                type="password"
              />
            </div>
          </div>
          <div
            className="sc-bcXGCL hOBcKE cap-form-control"
          >
            <label
              className="sc-bcXGCL egOoIT cap-form-label"
              htmlFor="username"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              <span
                className="sc-bcXGCL dRxVYq cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                global.fullname
              </span>
            </label>
            <input
              aria-required={true}
              autoComplete="username"
              className="sc-bcXGCL sc-dwnPIk cmIMrK eCNeCU cap-input"
              disabled={false}
              id="username"
              minLength={2}
              name="username"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="global.placeholder.name"
              readOnly={false}
              required={true}
              type="text"
            />
          </div>
          <div
            className="sc-bcXGCL hOBcKE cap-form-control"
          >
            <label
              className="sc-bcXGCL egOoIT cap-form-label"
              htmlFor="responses.0.value"
            >
              <span
                className="sc-bcXGCL dRxVYq cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                &lt;mock-value-for-field-"title"&gt;
              </span>
              <p
                className="sc-bcXGCL ayaql cap-text"
              >
                global.optional
              </p>
            </label>
            <span
              className="sc-bcXGCL cqMoEC cap-form-guideline"
            >
              &lt;mock-value-for-field-"helpText"&gt;
            </span>
            <div
              className=" ql-editor wysiwyg-render"
              dangerouslySetInnerHTML={
                {
                  "__html": "<mock-value-for-field-"description">",
                }
              }
            />
            <input
              aria-required={false}
              className="sc-bcXGCL sc-dwnPIk cmIMrK eCNeCU cap-input"
              disabled={false}
              id="responses.0.value"
              name="responses.0.value"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
            />
          </div>
          <div
            className="sc-bcXGCL hOBcKE cap-form-control"
          >
            <label
              className="sc-bcXGCL hcROMr"
              htmlFor="charte"
            >
              <div
                className="sc-bcXGCL fMWewb cap-checkbox"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                <input
                  aria-required={true}
                  className="sc-bcXGCL kwwjrp cap-checkbox__input"
                  disabled={false}
                  id="charte"
                  name="charte"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  style={
                    {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                  type="checkbox"
                />
                <div
                  className="sc-bcXGCL isUvxF cap-checkbox__box"
                />
              </div>
              <span
                className="sc-bcXGCL gXHFMY"
              >
                <span
                  className="sc-bcXGCL sc-cc425a65-0 gjsubU hMXkYl"
                >
                  registration.charte
                </span>
              </span>
            </label>
          </div>
          <div
            className="sc-bcXGCL dCOQzu"
          >
            <div
              className=" ql-editor wysiwyg-render"
              dangerouslySetInnerHTML={
                {
                  "__html": "Jsuis o bottom",
                }
              }
            />
          </div>
        </div>
        <footer
          className="sc-bcXGCL gthNCX cap-modal__footer"
        >
          <button
            className="sc-bcXGCL sc-gGvGpy fzdPDJ iCdXwD cap-button"
            onClick={[Function]}
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
            type="button"
          >
            global.cancel
          </button>
          <button
            className="sc-bcXGCL sc-gGvGpy fzdPDJ jrAhSN cap-button"
            id="confirm-login"
            type="submit"
          >
            global.register
          </button>
        </footer>
      </div>
    </div>
  </div>,
]
`;

exports[`<RegistrationModal /> renders only form 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div
    aria-label="global.register"
    data-dialog={true}
    hidden={false}
    id="id-g"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="sc-bcXGCL jRSyOc sc-fcCDYY cap-modal__overlay"
      onClick={[Function]}
      style={
        {
          "opacity": 0,
        }
      }
    >
      <div
        className="sc-bcXGCL hANKWR sc-GKYOR djSaGS cap-modal"
        style={
          {
            "opacity": 0,
            "transform": "translateY(-20px) translateZ(0)",
            "zIndex": 9000,
          }
        }
      >
        <header
          className="sc-bcXGCL jMEcWl cap-modal__header"
        >
          <div
            className="sc-bcXGCL ejBfRc"
          >
            <h4
              className="sc-bcXGCL osejp cap-heading"
              id="modal-title"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              global.register
            </h4>
          </div>
          <button
            aria-describedby="modal-title"
            className="sc-bcXGCL dCLTmf"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="false"
              className="sc-bcXGCL sc-oZHua iTLsCl cCzERh cap-icon"
              fill="none"
              height="1em"
              role="img"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 11 11 1M1 1l10 10"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={0.8}
              />
            </svg>
          </button>
        </header>
        <div
          className="sc-bcXGCL hsPaVR cap-modal__body"
        >
          <div
            className="sc-bcXGCL hOBcKE cap-form-control"
          >
            <label
              className="sc-bcXGCL egOoIT cap-form-label"
              htmlFor=":r5:"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              <span
                className="sc-bcXGCL dRxVYq cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                global.email
              </span>
            </label>
            <input
              aria-required={true}
              autoComplete="email"
              autoFocus={true}
              className="sc-bcXGCL sc-dwnPIk cmIMrK eCNeCU cap-input"
              disabled={false}
              id=":r5:"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="email.placeholder"
              readOnly={false}
              required={true}
              type="email"
            />
          </div>
          <div
            className="sc-bcXGCL jAguPG"
          >
            <div
              className="sc-bcXGCL dAxZoG cap-form-control"
            >
              <label
                className="sc-bcXGCL egOoIT cap-form-label"
                htmlFor=":r6:"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                <span
                  className="sc-bcXGCL dRxVYq cap-text"
                  style={
                    {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                >
                  registration.password
                </span>
              </label>
              <input
                aria-required={true}
                autoComplete="off"
                autoFocus={true}
                className="sc-bcXGCL sc-dwnPIk cmIMrK eCNeCU cap-input"
                disabled={false}
                id=":r6:"
                name="plainPassword"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={false}
                required={true}
                type="password"
              />
            </div>
          </div>
          <div
            className="sc-bcXGCL hOBcKE cap-form-control"
          >
            <label
              className="sc-bcXGCL egOoIT cap-form-label"
              htmlFor="username"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              <span
                className="sc-bcXGCL dRxVYq cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                global.fullname
              </span>
            </label>
            <input
              aria-required={true}
              autoComplete="username"
              className="sc-bcXGCL sc-dwnPIk cmIMrK eCNeCU cap-input"
              disabled={false}
              id="username"
              minLength={2}
              name="username"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="global.placeholder.name"
              readOnly={false}
              required={true}
              type="text"
            />
          </div>
          <div
            className="sc-bcXGCL hOBcKE cap-form-control"
          >
            <label
              className="sc-bcXGCL egOoIT cap-form-label"
              htmlFor="responses.0.value"
            >
              <span
                className="sc-bcXGCL dRxVYq cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                &lt;mock-value-for-field-"title"&gt;
              </span>
              <p
                className="sc-bcXGCL ayaql cap-text"
              >
                global.optional
              </p>
            </label>
            <span
              className="sc-bcXGCL cqMoEC cap-form-guideline"
            >
              &lt;mock-value-for-field-"helpText"&gt;
            </span>
            <div
              className=" ql-editor wysiwyg-render"
              dangerouslySetInnerHTML={
                {
                  "__html": "<mock-value-for-field-"description">",
                }
              }
            />
            <input
              aria-required={false}
              className="sc-bcXGCL sc-dwnPIk cmIMrK eCNeCU cap-input"
              disabled={false}
              id="responses.0.value"
              name="responses.0.value"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
            />
          </div>
          <div
            className="sc-bcXGCL hOBcKE cap-form-control"
          >
            <label
              className="sc-bcXGCL hcROMr"
              htmlFor="charte"
            >
              <div
                className="sc-bcXGCL fMWewb cap-checkbox"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                <input
                  aria-required={true}
                  className="sc-bcXGCL kwwjrp cap-checkbox__input"
                  disabled={false}
                  id="charte"
                  name="charte"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  style={
                    {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                  type="checkbox"
                />
                <div
                  className="sc-bcXGCL isUvxF cap-checkbox__box"
                />
              </div>
              <span
                className="sc-bcXGCL gXHFMY"
              >
                <span
                  className="sc-bcXGCL sc-cc425a65-0 gjsubU hMXkYl"
                >
                  registration.charte
                </span>
              </span>
            </label>
          </div>
        </div>
        <footer
          className="sc-bcXGCL gthNCX cap-modal__footer"
        >
          <button
            className="sc-bcXGCL sc-gGvGpy fzdPDJ iCdXwD cap-button"
            onClick={[Function]}
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
            type="button"
          >
            global.cancel
          </button>
          <button
            className="sc-bcXGCL sc-gGvGpy fzdPDJ jrAhSN cap-button"
            id="confirm-login"
            type="submit"
          >
            global.register
          </button>
        </footer>
      </div>
    </div>
  </div>,
]
`;
